5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1728_2504.log
== TEST (2019-05-15 15:39:57) 
-- CODE:
virus = int(input("quantidade de virus? "))
leucocitos = int(input(("quantidade de leucocitos? ")))
percentv = int(input("multiplicacao diaria do virus: "))
percentl = int(input("multiplicacao diaria do leucocitos: "))
dia = 0
while(leucocitos >= virus / 2)
	virus > lecocitos
	percentv < percentl
	
-- ERROR:
File "XXXX", line 6
    while(leucocitos >= virus / 2)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:40:00) 
-- CODE:
virus = int(input("quantidade de virus? "))
leucocitos = int(input(("quantidade de leucocitos? ")))
percentv = int(input("multiplicacao diaria do virus: "))
percentl = int(input("multiplicacao diaria do leucocitos: "))
dia = 0
while(leucocitos >= virus / 2)
	virus > lecocitos
	percentv < percentl
	
-- ERROR:
File "XXXX", line 6
    while(leucocitos >= virus / 2)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:16) 
-- CODE:
virus = int(input("quantidade de virus? "))
leucocitos = int(input(("quantidade de leucocitos? ")))
percentv = int(input("multiplicacao diaria do virus: "))
percentl = int(input("multiplicacao diaria do leucocitos: "))
dia = 0
somav = virus * percentv
somal = leucocitos * percentl
while(virus > lecocitos and percentv < percentl)
	leucocitos >= 2 * virus
	print(dia)
	dia = dia + 1
print(dia)
	
	
-- ERROR:
File "XXXX", line 8
    while(virus > lecocitos and percentv < percentl)
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:46:47) 
-- CODE:
virus = int(input("quantidade de virus? "))
leucocitos = int(input(("quantidade de leucocitos? ")))
percentv = int(input("multiplicacao diaria do virus: "))
percentl = int(input("multiplicacao diaria do leucocitos: "))
virus = 0
leucocitos = 0
dia = 0
somav = virus * percentv
somal = leucocitos * percentl
while(virus > lecocitos and percentv < percentl)
	leucocitos >= 2 * virus
	print(dia)
	dia = dia + 1
print(dia)
	
	
-- ERROR:
File "XXXX", line 10
    while(virus > lecocitos and percentv < percentl)
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:47:53) 
-- CODE:
virus = int(input("quantidade de virus? "))
leucocitos = int(input(("quantidade de leucocitos? ")))
percentv = int(input("multiplicacao diaria do virus: "))
percentl = int(input("multiplicacao diaria do leucocitos: "))
virus = 0
leucocitos = 0
dia = 0
somav = virus * percentv
somal = leucocitos * percentl
while(virus > lecocitos and percentv < percentl and virus > 0 and leucocitos > 0)
	leucocitos >= 2 * virus
	print(dia)
	dia = dia + 1
print(dia)
	
	
-- ERROR:
File "XXXX", line 10
    while(virus > lecocitos and percentv < percentl and virus > 0 and leucocitos > 0)
                                                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:51:13) 
-- CODE:
virus = int(input("quantidade de virus? "))
leucocitos = int(input(("quantidade de leucocitos? ")))
percentv = int(input("multiplicacao diaria do virus: "))
percentl = int(input("multiplicacao diaria do leucocitos: "))
virus = 0
leucocitos = 0
dia = 0
somav = virus * percentv
somal = leucocitos * percentl
while(virus > 0 and leucocitos > 0)
	leucocitos >= 2 * virus
	print(dia)
	dia = dia + 1
print(dia)
	
	
-- ERROR:
File "XXXX", line 10
    while(virus > 0 and leucocitos > 0)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:52:25) 
-- CODE:
virus = int(input("quantidade de virus? "))
leucocitos = int(input(("quantidade de leucocitos? ")))
percentv = int(input("multiplicacao diaria do virus: "))
percentl = int(input("multiplicacao diaria do leucocitos: "))
dia = 0
somav = virus * percentv
somal = leucocitos * percentl
while(virus > 0 and leucocitos > 0)
	leucocitos >= 2 * virus
	print(dia)
	dia = dia + 1
print(dia)
	
	
-- ERROR:
File "XXXX", line 8
    while(virus > 0 and leucocitos > 0)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:52:26) 
-- CODE:
virus = int(input("quantidade de virus? "))
leucocitos = int(input(("quantidade de leucocitos? ")))
percentv = int(input("multiplicacao diaria do virus: "))
percentl = int(input("multiplicacao diaria do leucocitos: "))
dia = 0
somav = virus * percentv
somal = leucocitos * percentl
while(virus > 0 and leucocitos > 0)
	leucocitos >= 2 * virus
	print(dia)
	dia = dia + 1
print(dia)
	
	
-- ERROR:
File "XXXX", line 8
    while(virus > 0 and leucocitos > 0)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:25:55) 
-- CODE:
v = int(input("Quantidade inicial copias: "))
l = int(input("Quantidade inicial leucocitos: "))

pv = float(input("Percentual do virus: "))
pl = float(input("Percentual dos leucocitos: "))
dias = 0

while (l < 2*v):
	v = v + v*pv/100
	l = l + l*pl/100
	dias = dias + 1
print(dias)
-- EXECUTION TIME:
0.693015
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
